--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -8,6 +8,11 @@
     font-size: 16px;
     }
 
+    main img {
+        height:300px;
+        width: 200px;
+    }
+
     h1, p, a, h2 {
     margin: 1em auto;
     text-align: center;
