--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,44 +1,76 @@
-    body {
+body {
     width: 100%;
     height: 100vh;
     margin: 0;
     background-color: #5299D3;
-    color: black;
+    color: #5E5C6C;
     font-family: Tahoma;
     font-size: 16px;
-    }
+}
 
-    main img {
-        height:300px;
-        width: 200px;
-    }
+main {
+    width: 90%; 
+    max-width: 1200px; 
+    margin: 0 auto; 
+    background: #5299D3;
+    text-align: center;
+}
 
-    h1, h2, h3 {
+main img {
+    height: 300px;
+    width: 200px;
+}
+
+h1, h2, h3 {
     margin: 1em auto;
     text-align: center;
-    }
+}
 
-    p, a {
-        margin: 1em auto;
-        text-align: center;
-    }
+p, a {
+    margin: 1em auto;
+    text-align: center;
+}
 
-    nav {
-        display: flex;
-        justify-content: center;
-        gap: 15px;
-    }
+nav {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
 
-    a, section {
-        text-decoration: none;
-        font-weight: bold;
-        color: darkblue;
-    }
+a, section {
+    text-decoration: none;
+    font-weight: bold;
+    color: darkblue;
+}
 
-    footer {
-        margin-top: 20px;
-        padding: 10px;
-        background-color: #5E5C6C;
-        color: white;
-        text-align: center;
+footer {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #5E5C6C;
+    color: rgb(239, 230, 230);
+    text-align: center;
+}
+
+
+@media screen and (min-width: 981px) and (max-width: 1400px) {
+    #colorbox {
+        background-color: #5299D3;
     }
+}
+
+
+@media screen and (min-width: 601px) and (max-width: 980px) {
+    #colorbox {
+        background-color: #5299D3;
+    }
+}
+
+
+@media screen and (min-width: 370px) and (max-width: 600px) {
+    #colorbox {
+        background-color: #5299D3;
+    }
+    main {
+        width: 95%;
+    }
+}
