--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -8,12 +8,14 @@ body {
     font-size: 16px;
 }
 
+
 main {
     width: 90%; 
     max-width: 1200px; 
     margin: 0 auto; 
     background: #5299D3;
     text-align: center;
+    color: #5E5C6C
 }
 
 main img {
@@ -24,6 +26,7 @@ main img {
 h1, h2, h3 {
     margin: 1em auto;
     text-align: center;
+    color: darkblue;
 }
 
 p, a {
@@ -37,18 +40,24 @@ nav {
     gap: 15px;
 }
 
-a, section {
+a {
     text-decoration: none;
     font-weight: bold;
     color: darkblue;
 }
 
+section {
+    text-decoration: none;
+    font-weight: bold;
+    color: #5E5C6C;;
+}
+
 footer {
     margin-top: 20px;
-    padding: 10px;
     background-color: #5E5C6C;
     color: rgb(239, 230, 230);
     text-align: center;
+    padding: 10px;
 }
 
 
