Footers/Header Dynamically

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,13 +1,23 @@
-<nav>
-    <a href="./">Home</a>
-    ||
-    <a href="introduction.html">Introduction</a>
-    ||
-    <a href="contract.html">Contract</a>
-    ||
-    <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
-    ||
-    <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
-    ||
-    <a href="website_evaluations.html">Website Evaluations</a>
-</nav> 
+<header>
+    <h1> Jonathan Lutabingwa's Joyful Lion</h1>
+    <nav>
+        <a href="./">Home</a>
+        ||
+        <a href="introduction.html">Introduction</a>
+        ||
+        <a href="contract.html">Contract</a>
+        ||
+        <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
+        ||
+        <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
+        ||
+        <a href="website_evaluations.html">Website Evaluations</a>
+        ||
+        <a href="links.html">Links</a>
+        ||
+        <a href="hobby/index.html">Hobby Midterm</a>
+    </nav>
+    <nav> 
+        <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
+    </nav>
+</header>
