Midterm 9/10 Done just AI Prompts

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,8 +1,7 @@
 <header>
     <h1> Jonathan Lutabingwa's Joyful Lion</h1>
     <nav>
-        <a href="./">Home</a>
-        ||
+        <a href="./">Home</a>||
         <a href="introduction.html">Introduction</a>
         ||
         <a href="contract.html">Contract</a>
@@ -17,5 +16,7 @@
     </nav>
     <nav> 
         <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
+        ||
+        <a href="/itis3135/hobby/index.html">Hobby</a>
     </nav>
 </header>
