Midterm clean up

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -11,7 +11,7 @@
     <br>
     <div>
         <p>
-            Page built by <a href="/itis3135/lutabingwagroupinc.com/index.html"><strong>Lutabingwa Group ©2025</strong></a>
+            Page built by <a href="lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
             <a href="https://www.freecodecamp.org/certification/jonathanlutabingwa/responsive-web-design">Certified in Responsive Web Design</a><em>2025</em>
         </p>
     </div>  
