--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,6 +17,6 @@
     <nav> 
         <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
         ||
-        <a href="/itis3135/hobby/index.html">Hobby</a>
+        <a href="hobby/">Hobby</a>
     </nav>
 </header>
