--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,6 +13,8 @@
         <a href="website_evaluations.html">Website Evaluations</a>
         ||
         <a href="links.html">Links</a>
+        ||
+        <a href="tables.html">Tables</a>
     </nav>
     <nav> 
         <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
