--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,21 +1,31 @@
-body {
+html, body {
+    box-sizing: border-box;
+}
+
+form, input, button, textarea, select {
+    box-sizing: border-box;
+}
+
+html {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+}
+
+body {
     margin: 0;
-    background-color: #5299D3;
-    color: #5E5C6C;
-    font-family: Tahoma;
+    background-color: #d3c1a5;
+    color: #4a3f35;
+    font-family: Tahoma, sans-serif;
     font-size: 16px;
 }
 
-
 main {
-    width: 90%; 
-    max-width: 1200px; 
-    margin: 0 auto; 
-    background: #5299D3;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    background: #d3c1a5;
     text-align: center;
-    color: #5E5C6C
+    color: #4a3f35;
 }
 
 main img {
@@ -26,7 +36,7 @@ main img {
 h1, h2, h3 {
     margin: 1em auto;
     text-align: center;
-    color: darkblue;
+    color: #3f759e;
 }
 
 p, a {
@@ -43,48 +53,112 @@ nav {
 a {
     text-decoration: none;
     font-weight: bold;
-    color: darkblue;
+    color: #3f759e;
 }
 
 ul {
-    text-align: center; 
+    text-align: center;
     list-style-position: inside;
 }
 
 section {
     text-decoration: none;
     font-weight: bold;
-    color: #5E5C6C;;
+    color: #4a3f35;
 }
 
 footer {
     margin-top: 20px;
-    background-color: #5E5C6C;
-    color: rgb(239, 230, 230);
+    background-color: #59493a;
+    color: #f8f5f0;
     text-align: center;
     padding: 10px;
 }
 
-
 @media screen and (min-width: 981px) and (max-width: 1400px) {
     #colorbox {
-        background-color: #5299D3;
+        background-color: #d3c1a5;
     }
 }
-
 
 @media screen and (min-width: 601px) and (max-width: 980px) {
     #colorbox {
-        background-color: #5299D3;
+        background-color: #d3c1a5;
     }
 }
 
-
 @media screen and (min-width: 370px) and (max-width: 600px) {
     #colorbox {
-        background-color: #5299D3;
+        background-color: #d3c1a5;
     }
     main {
         width: 95%;
     }
+}
+
+form {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    margin: auto;
+    border: 2px solid #c3b091;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-top: 10px;
+    color: #5d4b3e;
+}
+
+input[type="text"], input[type="file"] {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #a48c74;
+    border-radius: 4px;
+    background-color: #f8f5f0;
+    color: #4a3f35;
+}
+
+button, input[type="submit"], input[type="reset"] {
+    background-color: #3f759e;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 100%;
+    font-weight: bold;
+}
+
+button:hover, input[type="submit"]:hover, input[type="reset"]:hover {
+    background-color: #2a4559;
+}
+
+.course-entry {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+.course-entry input {
+    flex-grow: 1;
+    background-color: #f8f5f0;
+    border: 1px solid #a48c74;
+}
+
+.course-entry button {
+    background-color: #b5651d;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 4px;
+}
+
+.course-entry button:hover {
+    background-color: #8b4513;
 }
