--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -8,17 +8,19 @@
         ||
         <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
         ||
-        <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
-        ||
         <a href="website_evaluations.html">Website Evaluations</a>
         ||
         <a href="byo_intro.html">BYO - Introduction Page Form</a>
         ||
         <a href="tables.html">Tables</a>
+        ||
+        <a href="forms.html">Forms</a>
     </nav>
     <nav> 
         <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
         ||
         <a href="hobby/">Hobby</a>
+        ||
+        <a href="project/project_overview.html">Project Overview</a>
     </nav>
 </header>
