--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -36,6 +36,9 @@ ul {
 nav {
     text-align: center;
     padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
 }
 
 nav a {
@@ -47,7 +50,20 @@ nav a {
 }
 
 nav a:hover {
-    color: #8b5e3c;
+    color: #2e1706;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px; 
+}
+
+nav li {
+    margin: 0;
 }
 
 section {
