--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -22,5 +22,7 @@
         <a href="hobby/">Hobby</a>
         ||
         <a href="project/project_overview.html">Project Overview</a>
+        ||
+        <a href="project/">Client Project</a> 
     </nav>
 </header>
