--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -24,5 +24,7 @@
         <a href="project/project_overview.html">Project Overview</a>
         ||
         <a href="project/">Client Project</a> 
+        ||
+        <a href="slideshow.html">Slideshow</a>
     </nav>
 </header>
