--- a/itis3135/joyful_lion/styles/default.css
+++ b/itis3135/joyful_lion/styles/default.css
@@ -11,7 +11,7 @@ header {
     background: linear-gradient(to right, #D88C20, #F4A62E);
     color: white;
     padding: 20px;
-    text-align: center;
+    text-align:center;
 }
 
 h1 {
@@ -20,7 +20,7 @@ h1 {
 }
 
 nav {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 nav a {
@@ -28,7 +28,8 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     margin: 0 10px;
-    display: block;
+    display: inline-block;
+    margin-right: 20px
 }
 
 nav a:hover {
