--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -12,7 +12,12 @@
     <div>
         <p>
             Page built by <a href="lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
-            <a href="https://www.freecodecamp.org/certification/jonathanlutabingwa/responsive-web-design">Certified in Responsive Web Design</a><em>2025</em>
+            <br>
+            <br>
+            <a href="https://www.freecodecamp.org/certification/jonathanlutabingwa/responsive-web-design">Certified in Responsive Web Design</a>
+            <br>
+            <br>
+            <a href="https://www.freecodecamp.org/certification/jonathanlutabingwa/javascript-algorithms-and-data-structures-v8">Certified in JS</a>
         </p>
     </div>  
 
