--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,6 +15,8 @@
         <a href="tables.html">Tables</a>
         ||
         <a href="forms.html">Forms</a>
+        ||
+        <a href="drawing.html">Drawing</a>
     </nav>
     <nav> 
         <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
